igt@kms_flip@* - timeout - Inactivity timeout exceeded. Killing the current test with SIGQUIT
<7> [374.519566] xe 0000:00:02.0: [drm:intel_dp_link_train_phy [xe]] [CONNECTOR:189:eDP-1][ENCODER:188:DDI A/PHY A][DPRX] Clock recovery OK
<7> [374.519749] xe 0000:00:02.0: [drm:intel_dp_program_link_training_pattern [xe]] [CONNECTOR:189:eDP-1][ENCODER:188:DDI A/PHY A][DPRX] Using DP training pattern TPS4
<7> [374.552989] xe 0000:00:02.0: [drm:intel_dp_link_train_phy [xe]] [CONNECTOR:189:eDP-1][ENCODER:188:DDI A/PHY A][DPRX] Channel EQ done. DP Training successful
<7> [374.553237] xe 0000:00:02.0: [drm:intel_dp_link_train_phy [xe]] [CONNECTOR:189:eDP-1][ENCODER:188:DDI A/PHY A][DPRX] Link Training passed at link rate = 675000, lane count = 4
<7> [374.553774] xe 0000:00:02.0: [drm:intel_enable_transcoder [xe]] enabling pipe A
<7> [374.554057] xe 0000:00:02.0: [drm:intel_edp_backlight_on [xe]]
<7> [374.554228] xe 0000:00:02.0: [drm:intel_backlight_enable [xe]] pipe A
<7> [374.554453] xe 0000:00:02.0: [drm:intel_backlight_set_pwm_level [xe]] [CONNECTOR:189:eDP-1] set backlight PWM = 13892
<7> [374.555181] xe 0000:00:02.0: [drm:intel_fbc_update [xe]] reserved 8601600 bytes of contiguous stolen space for FBC, limit: 2
<7> [374.555362] xe 0000:00:02.0: [drm:intel_fbc_update [xe]] Enabling FBC on [PLANE:32:plane 1A]
<7> [374.558299] xe 0000:00:02.0: [drm:intel_psr_post_plane_update [xe]] Enabling Panel Replay
<7> [374.558635] xe 0000:00:02.0: [drm:verify_connector_state [xe]] [CONNECTOR:189:eDP-1]
<7> [374.558896] xe 0000:00:02.0: [drm:intel_modeset_verify_crtc [xe]] [CRTC:82:pipe A]
<7> [374.581983] xe 0000:00:02.0: [drm:intel_power_well_disable [xe]] disabling DC_off
<7> [374.582190] xe 0000:00:02.0: [drm:skl_enable_dc6 [xe]] Enabling DC6
<7> [374.582348] xe 0000:00:02.0: [drm:gen9_set_dc_state.part.0 [xe]] Setting DC state from 00 to 02
<7> [377.654138] xe 0000:00:02.0: [drm:intel_pps_vdd_off_sync_unlocked [xe]] [ENCODER:188:DDI A/PHY A] PPS 0 turning VDD off
<7> [377.654406] xe 0000:00:02.0: [drm:intel_pps_vdd_off_sync_unlocked [xe]] [ENCODER:188:DDI A/PHY A] PPS 0 PP_STATUS: 0x80000008 PP_CONTROL: 0x00000067
<4> [467.813989] [IGT] Inactivity timeout exceeded. Killing the current test with SIGQUIT.
<6> [467.814054] sysrq: HELP : loglevel(0-9) reboot(b) crash(c) show-all-locks(d) terminate-all-tasks(e) memory-full-oom-kill(f) kill-all-tasks(i) thaw-filesystems(j) sak(k) show-backtrace-all-active-cpus(l) show-memory-usage(m) nice-all-RT-tasks(n) poweroff(o) show-registers(p) show-all-timers(q) unraw(r) sync(s) show-task-states(t) unmount(u) force-fb(v) show-blocked-tasks(w) dump-ftrace-buffer(z) replay-kernel-logs(R)
<6> [467.814152] sysrq: Show State
<6> [467.814161] task:systemd state:S stack:0 pid:1 tgid:1 ppid:0 flags:0x00000000
<6> [467.814173] Call Trace:
<6> [467.814177] <TASK>
<6> [467.814185] __schedule+0xc97/0x1ab0
<6> [467.814199] ? lock_acquire+0xd9/0x300
<6> [467.814221] schedule+0x40/0x130
<6> [467.814228] schedule_hrtimeout_range_clock+0x130/0x140
<6> [467.814243] schedule_hrtimeout_range+0x13/0x20
<6> [467.814248] do_epoll_wait+0x748/0x970
<6> [467.814268] ? __pfx_ep_autoremove_wake_function+0x10/0x10
<6> [467.814280] __x64_sys_epoll_wait+0x59/0x90
<6> [467.814290] x64_sys_call+0x1a10/0x20d0
<6> [467.814297] do_syscall_64+0x85/0x140
<6> [467.814303] ? syscall_exit_to_user_mode+0xd9/0x240
<6> [467.814312] ? do_syscall_64+0x91/0x140
<6> [467.814321] ? seq_read+0xfc/0x140
<6> [467.814338] ? vfs_read+0xc0/0x350
<6> [467.814347] ? do_syscall_64+0x91/0x140
<6> [467.814351] ? syscall_exit_to_user_mode+0xd9/0x240