drivers/gpu/drm/i915/display/intel_display_types.h
@@ -1540,6 +1540,8 @@ struct intel_crtc {
 #ifdef CONFIG_DEBUG_FS
 	struct intel_pipe_crc pipe_crc;
 #endif
+
+	u8 block_dc_for_vblank;
 };
 
 struct intel_plane {
